<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="com.unpar.e_juklak.HomeActivity" >

    <RelativeLayout
        android:layout_width="322dp"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
         >

        <LinearLayout
            android:id="@+id/llHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@string/logo_unpar"
                android:src="@drawable/unpar" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:gravity="center_vertical"
                android:text="@string/juklak"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="40sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_below="@+id/llHeader"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/logo_juklak"
            android:layout_marginTop="80dp"
            
            android:src="@drawable/owl" />

        <Button
            android:id="@+id/btnStartJuklak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/imageView2"
            android:layout_below="@+id/imageView2"
            android:layout_marginTop="50dp"
            android:onClick="onClickListener"
            android:text="@string/taptostart" />

        <LinearLayout
            android:id="@+id/btnStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/llHeader"
            android:layout_alignRight="@+id/llHeader"
            android:layout_below="@+id/btnStartJuklak"
            android:layout_marginTop="57dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/ftis"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/unpar"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tahun"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="12sp" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>